# sdl_image_renderer

./: CMakeLists.txt  README.md  conanfile.py
include/: sdl_image_renderer.h
src/: interface.cpp  sdl_image_renderer.cpp
